--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,7 +1,6 @@
 group 'com.sominviacheslav.device_display_brightness'
 version '1.0-SNAPSHOT'
 
-
 buildscript {
     ext.kotlin_version = '1.7.20'
     repositories {
@@ -25,7 +24,6 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
-
 android {
     namespace "com.sominviacheslav.device_display_brightness"
     compileSdkVersion 33
@@ -33,11 +31,21 @@ android {
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
+
     defaultConfig {
         minSdkVersion 21
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8
     }
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
